# beam_fea

./: .gitignore  CHANGELOG.md  README.md  THEORY.md  pyproject.toml
.github/workflows/: python-app.yml
beam_fea/: __init__.py  _version.py  analysis.py  assembly.py  batch.py  boundary_conditions.py  composites.py  cross_sections.py  element_matrices.py  failure_criteria.py  loads.py  materials.py  mesh.py  modal_analysis.py  plot_style.py  post_processing.py  properties.py  report_generator.py  solver.py  static_analysis.py  visualizer.py
examples/: README.md  ex01_cantilever.py  ex02_fixed_fixed_beam.py  ex03_vibration.py  ex04_combined_analysis.py  ex05_composite_beam.py  ex06_anisotropic_coupling.py  ex07_angled_frame.py  ex08_batch_analysis.py  template_batch.py  template_modal.py  template_multi_property.py  template_static.py
scripts/: benchmark_performance.py  clean_install.py  test_modal_mass.py  test_path_mesh.py  validate_accuracy.py  visual_test_configurations.py
tests/: README.md  __init__.py  benchmark_modal.py  conftest.py  test_anisotropy.py  test_batch_analysis.py  test_batch_validation.py  test_centralized_forces.py  test_composites.py  test_coordinate_loads.py  test_cross_sections.py  test_declarative_properties.py  test_element_matrices.py  test_failure_criteria.py  test_integration.py  test_lumped_mass.py  test_materials.py  test_mesh.py  test_model_validation.py  test_peer_review_fixes.py  test_section_enhancements.py  test_stresses.py  test_viz_sections.py
