[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beam-fea"
dynamic = ["version"]
authors = [
  { name="Beam FEA Development Team" },
]
description = "A comprehensive finite element analysis package for beam structures"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "tabulate"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["beam_fea*"]

[tool.setuptools.dynamic]
version = {attr = "beam_fea._version.__version__"}
